Implemented SavePoint Pedestal
Added player command "/skyquest save point"
Added permission "skyquest.savepoint"
Changed test fuzzy match event to test save points
Fixed help command for player and console
Added new Util functions to convert a location to string and back
Added the save pedestal

--- a/SkyQuest/plugin.yml
+++ b/SkyQuest/plugin.yml
@@ -18,10 +18,14 @@ permissions:
     children:
       skyquest.skyquest: true
       skyquest.help: true
+      skyquest.savepoint: true
       
   skyquest.skyquest:
     description: Access to the skyquest command.
     default: op
   skyquest.help:
     description: Allows a player to access the help command.
+    default: op
+  skyquest.savepoint:
+    description: Allows a player to use the savepoint command.
     default: op
